fix the truncation of the nav

--- a/app/assets/stylesheets/frontend/layout.scss
+++ b/app/assets/stylesheets/frontend/layout.scss
@@ -49,7 +49,9 @@
     .steps-progress-bar li {
       > a,
       > span {
-        max-width: 150px;
+        @media (min-width: 1036px) {
+          max-width: 150px;
+        }
       }
     }
   }
